<resources>
    <string name="app_name">Foodyfy</string>
    <string name="foodyfy">FOODYFY</string>
    <string name="pay_text">Pay Now</string>
    <string name="confirm">Confirm</string>
    <string name="created_quantity">Quantity</string>
    <string name="currency">Ksh.</string>
    <string name="red">Your order has been cancelled</string>
    <string name="processing">Your order is being processed</string>
    <string name="green">Payment done! thank you</string>
    <string name="slogan">More | Quality | Cheap</string>
    <string name="logout">Logout</string>
    <string name="name_of_the_food">Name of the food</string>
    <string name="upload_image">Upload image</string>
    <string name="my_menu">My Menu</string>
    <string name="create_new_food">Create New Food</string>
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="food_description">Food description</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <!-- dialog tags -->
    <string name="dialog_choose_quantity">Choose Quantity</string>

    <!-- fragment tags -->
    <string name="fragment_main">Main</string>
    <string name="fragment_view_product">View Product</string>
    <string name="fragment_view_cart">View Cart</string>

    <!-- Intent keys -->
    <string name="intent_product">intent_product</string>

    <!-- Strings -->
    <string name="dialog_quantity_title">Qty: </string>
    <string name="cart_subtotal">Cart subtotal</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
</resources>
