<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bodyColour"
    tools:context=".CreateFood">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_the_food"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:id="@+id/created_food_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:id="@+id/created_food_price"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/created_quantity"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:id="@+id/created_food_quantity"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_description"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:id="@+id/created_food_description"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:id="@+id/upload_image_btn"
                android:background="@color/colorAccent"
                android:textColor="@color/whiteBackground"
                android:padding="@dimen/padding_left"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/upload_image"/>

            <ImageView
                android:layout_width="@dimen/food_image_height"
                android:layout_height="@dimen/food_image_width"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_gravity="center"
                tools:src="@drawable/nyama"/>



        </LinearLayout>

    </ScrollView>
</LinearLayout>